@@ -6,7 +6,7 @@
 	</settings>
 	<database>
 		<provider name="OleDb1.1" />
-		<dataSource name="Access" connectionString="Provider=Microsoft.Jet.OLEDB.4.0;Data Source=../castle_temp.mdb" />
+		<dataSource name="Access" connectionString="REPLACEME" />
 	</database>
 	<sqlMaps>
 		<sqlMap resource="../Maps/Access/OleDb/Account.xml" />
