@@ -1,3 +1,6 @@
+Beta 2
+- Added in the ability to configure the connection string in the xml configuration
+
 
 Beta 1
 
